# programming-genai

./: LICENSE  README.md  agentic.ipynb  agentic.md  attention.ipynb  augmentation.ipynb  chapters.md  codeembed.md  codeembed2.md  coderag.md  context.md  cover.md  deploy.sh  design.ipynb  efficiency.ipynb  efficiency.md  foundations.ipynb  front.ipynb  further.ipynb  intro.ipynb  license.ipynb  license.md  main.py  metacoding.ipynb  mm.ipynb  mm.md  myst.yml  pe.ipynb  pe.md  privacy.ipynb  privacy.md  prompting.ipynb  pyproject.toml  rag.md  references.bib  requirements.txt  research.ipynb  scr.md  semantic.ipynb  semantics.ipynb  (+4 more)
.github/workflows/: deploy.yml
