[project]
name = "programming-genai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docutils~=0.20",
    "ghp-import>=2.1.0",
    "jupyter>=1.1.1",
    "jupyter-book>=2.0.0a0",
    "matplotlib>=3.10.7",
    "mplfonts>=0.0.10",
    "numpy>=2.3.4",
    "ollama>=0.6.0",
    "pandas>=2.3.3",
    "pydata-sphinx-theme>=0.13.3",
    "seaborn>=0.13.2",
    "sphinx==7.0.1",
    "sphinx-proof>=0.3.0",
    "sphinxcontrib-bibtex==2.6.5",
    "tiktoken>=0.12.0",
    "torch>=2.9.0",
    "torchaudio>=2.9.0",
    "torchvision>=0.24.0",
    "transformers>=4.57.1",
]
